@@ -3,6 +3,13 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+09/06/04
+	* Rev. 13843 Updates to ST_PRESERVE and a few other minor details! [L0ne_W0lf]
+	- Recasting Preserve no longer toggles the skill off while active.
+	- Preserve is no longer saved on log-out or mapserver changes.
+	* Added SC_CRITICALWOUND and SC_SLOWCAST to negative statuses not saved with battle_config.debuff_on_logout&1
+	* Implemented the skills NPC_HELLPOWER and NPC_WIDEHELLDIGNITY, as per my personal experiences with the skill on iRO.
+	* Increased MAX_MOBSKILL to 50, as Satan Morroc has over 40 active skills now.
 09/06/03
 	* Some clean ups on autocast and itemskill code. (see topic:220921 for some info) [Inkfish]
 	- Autocasted Teleport now skips the menu.
