@@ -970,6 +970,12 @@
 678,0,0,0,0,5000
 //==========================================
 
+//===== New Monster Skills (12.1) ==========
+//-- NPC_HELLPOWER
+683,0,0,0,0,300000
+//-- NPC_WIDEHELLDIGNITY
+684,0,0,0,0,300000
+
 //===== Item Use-Only Skills ===============
 //-- CASH_BLESSING
 689,0,0,0,60000:80000:100000:120000:140000:160000:180000:200000:220000:240000,0
